[package]
name = "test_pyshop3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
hex-literal = "0.4.1"
sha2 = "0.10.7"
tokio = { version = "1.32.0", features = ["full"] }
